[project]
name = "RestTimer"
version = "0.1.0"
description = ""
authors = [
    {name = "JW5123",email = "JW5123@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "pyqt5-qt5 (==5.15.2)",
    "pyqt5-sip (==12.13.0)",
    "pyqt5 (==5.15.10)",
    "screeninfo (>=0.8.1,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
